[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/Images/Logo.png" type="Texture" id=1]
[ext_resource path="res://UI/TitleScreen.gd" type="Script" id=2]

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 512, 100 )
texture = ExtResource( 1 )

[node name="NewGameButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 175.0
margin_right = 768.0
margin_bottom = 195.0
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 200.0
margin_right = 768.0
margin_bottom = 220.0
text = "Continue Story"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
margin_left = 256.0
margin_top = 225.0
margin_right = 768.0
margin_bottom = 245.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DeleteSaveButton" type="Button" parent="."]
margin_left = 908.541
margin_top = 580.267
margin_right = 1023.54
margin_bottom = 600.267
text = "Delete Save File"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VersionLabel" type="Label" parent="."]
margin_left = 0.910217
margin_top = 585.328
margin_right = 40.9102
margin_bottom = 599.328
text = "Alpha Version 0.01a"
[connection signal="pressed" from="NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="DeleteSaveButton" to="." method="_on_DeleteSaveButton_pressed"]
